--- a/tasks/01_prep_os.yml
+++ b/tasks/01_prep_os.yml
@@ -30,6 +30,60 @@
         reload: true
       with_dict: "{{ install.os.sysctl_updates }}"
 
+# [ Setup K3s Storage Location ]###################################################################
+# K3s embedded containerd does not include support for ZFS filesystem.  External containerd would
+# need external RunC, iptables, cAdvistor and extra complexity. Until k3s supports ZFS it is easier
+# to place a ZVOL at "/var/lib/rancher" using ext4 or xfs files system to allow K3s to use containerd
+# with the overlayfs.
+
+- name: Setup K3s Storage Location
+  tags:
+    - prep_os
+  block:
+    # Expected to return no output if not found, this is needed to prevent error below.
+    - name: Check if K3s Volume is already exists
+      ansible.builtin.shell:
+        cmd: "zfs list {{ install.k3s.zfs.pool }}/{{ k3s.zfs.zvol.volume_name }} 2>&1"
+      register: zvol
+      failed_when: "zvol.rc != 0 and zvol.rc != 1"
+      changed_when: zvol.rc == 0
+
+    # This would error with volblocksize as read-only property if volume already existed.
+    # When clause added to get around this error condition
+    - name: Create ZFS ZVOL for K3s (if does not exist)
+      community.general.zfs:
+        name: "{{ install.k3s.zfs.pool }}/{{ k3s.zfs.zvol.volume_name }}"
+        extra_zfs_properties: "{{ install.k3s.zfs.zvol.options }}"
+        state: present
+      when:
+        - zvol.stdout.find("MOUNTPOINT") == -1
+
+    - name: Create Filesystem for K3s ZVOL
+      community.general.filesystem:
+        fstype: "{{ install.k3s.zfs.zvol.format }}"
+        dev: "/dev/zvol/{{ install.k3s.zfs.pool }}/{{ k3s.zfs.zvol.volume_name }}"
+
+    - name: Mount K3s Volume into /etc/fstab
+      ansible.posix.mount:
+        path: "{{ k3s.zfs.zvol.mountpoint }}"
+        src: "/dev/zvol/{{ install.k3s.zfs.pool }}/{{ k3s.zfs.zvol.volume_name }}"
+        opts: defaults
+        fstype: "{{ install.k3s.zfs.zvol.format }}"
+        state: mounted
+
+    # Expected to return no output if not found
+    - name: Confirm K3s Volume is mounted
+      ansible.builtin.command:
+        cmd: "findmnt -t {{ install.k3s.zfs.zvol.format | string }} --target {{ k3s.zfs.zvol.mountpoint }}"
+      register: zvol
+      changed_when: zvol.rc == 0
+
+    - name: Fail if K3s volume is not mounted
+      ansible.builtin.fail:
+        msg: "K3s volume not mounted as expected."
+      when:
+        - zvol.stdout.find("TARGET") == -1
+
 # [ Setup Longhorn Storage Location ]##############################################################
 # Storage for longhorn needs to be in-place before node joins the cluster.
 
