Sealed Secret Helm Chart Task name change

--- a/tasks/06_install_sealed_secrets.yml
+++ b/tasks/06_install_sealed_secrets.yml
@@ -26,7 +26,7 @@
       when:
         - install.sealed_secrets.use_pre_generated_private_key | default(false) | bool
 
-    - name: Install Sealed Secrets Helm
+    - name: Install Sealed Secrets Helm Chart
       kubernetes.core.helm: # noqa yaml[line-length]
         name: sealed-secrets
         atomic: true
