--- a/files/prometheus-op/k3s_config.yaml
+++ b/files/prometheus-op/k3s_config.yaml
@@ -1,7 +1,8 @@
+---
 etcd-expose-metrics: true
 kube-controller-manager-arg:
-- bind-address=0.0.0.0
+  - "bind-address=0.0.0.0"
 kube-proxy-arg:
-- metrics-bind-address=0.0.0.0
+  - "metrics-bind-address=0.0.0.0"
 kube-scheduler-arg:
-- bind-address=0.0.0.0
+  - "bind-address=0.0.0.0"
