--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -12,12 +12,11 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches:
-      - "main"
+    branches: ["main", "master"]
 
   pull_request:
     branches:
-      - "main"
+      branches: ["main", "master"]
 
 ###############
 # Set the Job #
