--- a/.github/workflows/meta-labeler.yaml
+++ b/.github/workflows/meta-labeler.yaml
@@ -5,7 +5,7 @@ name: "Meta Labeler"
 on:
   workflow_dispatch:
   pull_request:
-    branches: ["main"]
+    branches: ["main", "master"]
 
 jobs:
   labeler:
