--- a/.github/workflows/meta-sync-labels.yaml
+++ b/.github/workflows/meta-sync-labels.yaml
@@ -5,7 +5,7 @@ name: "Meta Sync labels"
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches: ["main", "master"]
     paths: [".github/labels.yaml"]
 
 jobs:
