--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -7,9 +7,6 @@ name: Lint Code Base
 # https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions
 #
 
-#############################
-# Start the job on all push #
-#############################
 on:
   push:
     branches: ["main", "master"]
@@ -17,35 +14,24 @@ on:
   pull_request:
     branches: ["main", "master"]
 
-###############
-# Set the Job #
-###############
 jobs:
   build:
-    # Name the Job
     name: Lint Code Base
-    # Set the agent to run on
     runs-on: ubuntu-latest
-
-    ##################
-    # Load all steps #
-    ##################
     steps:
-      ##########################
-      # Checkout the code base #
-      ##########################
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Generate Token
+        uses: tibdex/github-app-token@b62528385c34dbc9f38e5f4225ac829252d1ea92 # v1.8.0
+        id: generate-token
         with:
-          # Full git history is needed to get a proper list of changed
-          # files within `super-linter`
-          fetch-depth: 0
+          app_id: "${{ secrets.BOT_APP_ID }}"
+          private_key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
 
-      ################################
-      # Run Linter against code base #
-      ################################
+      - name: Checkout
+        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
+        with:
+          token: "${{ steps.generate-token.outputs.token }}"
+
       # https://github.com/marketplace/actions/super-linter
-
       - name: Lint Code Base
         uses: github/super-linter/slim@v5
         env:
@@ -54,4 +40,4 @@ jobs:
           KUBERNETES_KUBECONFORM_OPTIONS: "--ignore-missing-schemas"
           # KUBERNETES_KUBECONFORM_OPTIONS: "-schema-location default -schema-location https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/{{.Group}}/{{.ResourceKind}}_{{.ResourceAPIVersion}}.json"
           DEFAULT_BRANCH: master
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: "${{ steps.generate-token.outputs.token }}"
