--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -18,6 +18,12 @@ jobs:
   build:
     name: Lint Code Base
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: read
+      statuses: write
+
     steps:
       - name: Generate Token
         uses: tibdex/github-app-token@b62528385c34dbc9f38e5f4225ac829252d1ea92 # v1.8.0
@@ -29,6 +35,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
         with:
+          fetch-depth: 0
           token: "${{ steps.generate-token.outputs.token }}"
 
       # https://github.com/marketplace/actions/super-linter
