FIX: YAML changes per linter

--- a/tasks/02_install_k3s.yml
+++ b/tasks/02_install_k3s.yml
@@ -17,13 +17,13 @@
       ansible.builtin.get_url:
         url: "{{ k3s.url }}"
         dest: "/home/{{ install.os.non_root_user.name }}/k3s_install.sh"
-        mode: ug+x
+        mode: "ug+x"
 
     - name: Create non-root user .kube directory
       ansible.builtin.file:
         path: "/home/{{ install.os.non_root_user.name }}/.kube"
         state: directory
-        mode: 0700
+        mode: "700"
         owner: "{{ install.os.non_root_user.name }}"
         group: "{{ install.os.non_root_user.name }}"
 
@@ -80,8 +80,10 @@
   #      msg: "{{ install.k3s.cli_options|join(' ')}} INSTALL_K3S_EXEC=\"{{ install_k3s_exec_options}}\" "
 
     - name: Execute k3s_install.sh and create k3s_install.log for Control Plane Node
-      ansible.builtin.shell: # noqa yaml[line-length]
-        cmd: "{{ install.k3s.cli_options | join(' ') }} INSTALL_K3S_EXEC=\"{{ install_k3s_exec_options }}\" /home/{{ install.os.non_root_user.name }}/k3s_install.sh > /home/{{ install.os.non_root_user.name }}/k3s_install.log"
+      ansible.builtin.shell:
+        cmd: >
+          {{ install.k3s.cli_options | join(' ') }} INSTALL_K3S_EXEC=\"{{ install_k3s_exec_options }}\"
+          /home/{{ install.os.non_root_user.name }}/k3s_install.sh > /home/{{ install.os.non_root_user.name }}/k3s_install.log
         chdir: "/home/{{ install.os.non_root_user.name }}"
       register: cmd
       changed_when: cmd.rc == 0
@@ -101,8 +103,11 @@
         install_k3s_exec_options: ""
 
     - name: Execute k3s_install.sh and create k3s_install.log for K3S Agent Node
-      ansible.builtin.shell: # noqa yaml[line-length]
-        cmd: "INSTALL_K3S_SKIP_START=true K3S_URL=https://{{ groups['k3s_control'][0] }}:6443 K3S_TOKEN={{ K3S_TOKEN | default('top_secret') }} INSTALL_K3S_EXEC=\"{{ install_k3s_exec_options }}\" /home/{{ install.os.non_root_user.name }}/k3s_install.sh > /home/{{ install.os.non_root_user.name }}/k3s_install.log"
+      ansible.builtin.shell:
+        cmd: >
+          INSTALL_K3S_SKIP_START=true K3S_URL=https://{{ groups['k3s_control'][0] }}:6443
+          K3S_TOKEN={{ K3S_TOKEN | default('top_secret') }} INSTALL_K3S_EXEC=\"{{ install_k3s_exec_options }}\"
+          /home/{{ install.os.non_root_user.name }}/k3s_install.sh > /home/{{ install.os.non_root_user.name }}/k3s_install.log
         chdir: "/home/{{ install.os.non_root_user.name }}"
       register: cmd
       changed_when: cmd.rc == 0
