--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -25,18 +25,10 @@ jobs:
       statuses: write
 
     steps:
-      - name: Generate Token
-        uses: tibdex/github-app-token@b62528385c34dbc9f38e5f4225ac829252d1ea92 # v1.8.0
-        id: generate-token
-        with:
-          app_id: "${{ secrets.BOT_APP_ID }}"
-          private_key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
-
-      - name: Checkout
-        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
+      - name: Checkout Code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: "${{ steps.generate-token.outputs.token }}"
 
       # https://github.com/marketplace/actions/super-linter
       - name: Lint Code Base
@@ -47,4 +39,4 @@ jobs:
           KUBERNETES_KUBECONFORM_OPTIONS: "--ignore-missing-schemas"
           # KUBERNETES_KUBECONFORM_OPTIONS: "-schema-location default -schema-location https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/{{.Group}}/{{.ResourceKind}}_{{.ResourceAPIVersion}}.json"
           DEFAULT_BRANCH: master
-          GITHUB_TOKEN: "${{ steps.generate-token.outputs.token }}"
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
