--- a/tasks/02_install_k3s.yml
+++ b/tasks/02_install_k3s.yml
@@ -82,7 +82,7 @@
     - name: Execute k3s_install.sh and create k3s_install.log for Control Plane Node
       ansible.builtin.shell:
         cmd: >
-          {{ install.k3s.cli_options | join(' ') }} INSTALL_K3S_EXEC=\"{{ install_k3s_exec_options }}\"
+          {{ install.k3s.cli_options | join(' ') }} INSTALL_K3S_EXEC="{{ install_k3s_exec_options }}"
           /home/{{ install.os.non_root_user.name }}/k3s_install.sh > /home/{{ install.os.non_root_user.name }}/k3s_install.log
         chdir: "/home/{{ install.os.non_root_user.name }}"
       register: cmd
