--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,6 +35,7 @@
     - 00_config_rsyslog.yml
     - 01_prep_os.yml
     - 02_install_k3s.yml
+    - 02_install_etcd_utils.yml
     - 03_apply_labels.yml
     - 04_validate_k3s.yml
     - 05_install_helm_client.yml
