fix: allow labels to be overwritten

--- a/tasks/03_apply_labels.yml
+++ b/tasks/03_apply_labels.yml
@@ -13,6 +13,7 @@
         argv:
           - /usr/local/bin/kubectl
           - label
+          - --overwrite
           - node
           - "{{ inventory_hostname_short }}"
           - "{{ item }}"
